# FFQueue

./: .gitignore  BUILD-GUIDE.TXT  FFQueue.cbp  FFQueue.cbp_BAK  FFQueue.cbp_TMP  Makefile.am  Makefile.in  Makefile.lin  Makefile.win  README.md  configure  configure.ac  re-automake.sh  version.h  wx_pch.h
res/: MainIcon16.xpm  MainIcon32.xpm  MainIcon64.xpm  about.txt  aomav1.ffqs  ffqueue.desktop  fonts.conf  manifest  metainfo.xml  rav1e.ffqs  x264.ffqs  x265.ffqs
src/: FFQAbout.cpp  FFQAbout.h  FFQApp.cpp  FFQApp.h  FFQBatchMake.cpp  FFQBatchMake.h  FFQBitRatePanel.cpp  FFQBitRatePanel.h  FFQCodecInfoEdit.cpp  FFQCodecInfoEdit.h  FFQConfigEdit.cpp  FFQConfigEdit.h  FFQFilterEdit.cpp  FFQFilterEdit.h  FFQFullSpec.cpp  FFQFullSpec.h  FFQJobEditAdv.cpp  FFQJobEditAdv.h  FFQJobEditAdvCuts.cpp  FFQJobEditAdvCuts.h  FFQJobEditAdvPopup.cpp  FFQJobEditAdvPopup.h  FFQLangEdit.cpp  FFQLangEdit.h  FFQMain.cpp  FFQMain.h  FFQPresetEdit.cpp  FFQPresetEdit.h  FFQPresetMgr.cpp  FFQPresetMgr.h  FFQPresetPanel.cpp  FFQPresetPanel.h  FFQShowText.cpp  FFQShowText.h  FFQTimeEdit.cpp  FFQTimeEdit.h  Makefile.am  Makefile.in  bin_res.cpp  bin_res.h  (+1 more)
src/filter/: AudioDelay.cpp  AudioDelay.h  AudioTempo.cpp  AudioTempo.h  BoxBlur.cpp  BoxBlur.h  ChannelMap.cpp  ChannelMap.h  ColorBalance.cpp  ColorBalance.h  ColorMatrix.cpp  ColorMatrix.h  ColorOverlay.cpp  ColorOverlay.h  Crop.cpp  Crop.h  Curves.cpp  Curves.h  Custom.cpp  Custom.h  Decimate.cpp  Decimate.h  Deflicker.cpp  Deflicker.h  Deinterlace.cpp  Deinterlace.h  Dejudder.cpp  Dejudder.h  Delogo.cpp  Delogo.h  Deshake.cpp  Deshake.h  DynAudNorm.cpp  DynAudNorm.h  Echo.cpp  Echo.h  Elbg.cpp  Elbg.h  Equalizer.cpp  Equalizer.h  (+48 more)
src/tools/: FFQConcat.cpp  FFQConcat.h  FFQThumbMake.cpp  FFQThumbMake.h  FFQThumbPanel.cpp  FFQThumbPanel.h  FFQVidStab.cpp  FFQVidStab.h  FFQVideoToGIF.cpp  FFQVideoToGIF.h
src/utils/: FFQBuildCmd.cpp  FFQBuildCmd.h  FFQCodecInfo.cpp  FFQCodecInfo.h  FFQCompress.cpp  FFQCompress.h  FFQConfig.cpp  FFQConfig.h  FFQConsole.cpp  FFQConsole.h  FFQConst.cpp  FFQConst.h  FFQDebugUtils.cpp  FFQDebugUtils.h  FFQFilter.cpp  FFQFilter.h  FFQHash.cpp  FFQHash.h  FFQJob.cpp  FFQJob.h  FFQLang.cpp  FFQLang.h  FFQMisc.cpp  FFQMisc.h  FFQNvpList.cpp  FFQNvpList.h  FFQParsing.cpp  FFQParsing.h  FFQPixFmt.cpp  FFQPixFmt.h  FFQPreset.cpp  FFQPreset.h  FFQProbing.cpp  FFQProbing.h  FFQProcess.cpp  FFQProcess.h  FFQQueueItem.cpp  FFQQueueItem.h  FFQStaticJob.cpp  FFQStaticJob.h  (+11 more)
wxsmith/: FFQAbout.wxs  FFQBatchMake.wxs  FFQBitRatePanel.wxs  FFQCodecInfoEdit.wxs  FFQConcat.wxs  FFQConfigEdit.wxs  FFQFilterEdit.wxs  FFQFullSpec.wxs  FFQJobEditAdv.wxs  FFQJobEditAdvCuts.wxs  FFQJobEditAdvPopup.wxs  FFQLangEdit.wxs  FFQMain.wxs  FFQPresetEdit.wxs  FFQPresetMgr.wxs  FFQPresetPanel.wxs  FFQShowText.wxs  FFQThumbMake.wxs  FFQThumbPanel.wxs  FFQTimeEdit.wxs  FFQVidStab.wxs  FFQVideoToGIF.wxs
