bin_PROGRAMS=ffqueue
ffqueue_CXXFLAGS=`wx-config --debug=no --cxxflags` -std=c++11 -include ../wx_pch.h
ffqueue_LDFLAGS=-s
ffqueue_LDADD=@LIBS@
ffqueue_SOURCES=FFQAbout.cpp\
	FFQApp.cpp\
	FFQBatchMake.cpp\
	FFQBitRatePanel.cpp\
	FFQCodecInfoEdit.cpp\
	FFQConfigEdit.cpp\
	FFQFilterEdit.cpp\
	FFQFullSpec.cpp\
	FFQJobEditAdv.cpp\
	FFQJobEditAdvCuts.cpp\
	FFQJobEditAdvPopup.cpp\
	FFQLangEdit.cpp\
	FFQMain.cpp\
	FFQPresetEdit.cpp\
	FFQPresetMgr.cpp\
	FFQPresetPanel.cpp\
	FFQShowText.cpp\
	FFQTimeEdit.cpp\
	bin_res.cpp\
	filter/AudioDelay.cpp\
	filter/AudioTempo.cpp\
	filter/BoxBlur.cpp\
	filter/ChannelMap.cpp\
	filter/ColorBalance.cpp\
	filter/ColorMatrix.cpp\
	filter/ColorOverlay.cpp\
	filter/Crop.cpp\
	filter/Curves.cpp\
	filter/Custom.cpp\
	filter/Decimate.cpp\
	filter/Deflicker.cpp\
	filter/Deinterlace.cpp\
	filter/Dejudder.cpp\
	filter/Delogo.cpp\
	filter/Deshake.cpp\
	filter/DynAudNorm.cpp\
	filter/Echo.cpp\
	filter/Elbg.cpp\
	filter/Equalizer.cpp\
	filter/FilterBasePanel.cpp\
	filter/Flanger.cpp\
	filter/Flip.cpp\
	filter/FrameStep.cpp\
	filter/FramesPerSecond.cpp\
	filter/FullSpec.cpp\
	filter/HighLowBandPass.cpp\
	filter/Hqdn3d.cpp\
	filter/Hue.cpp\
	filter/Interlace.cpp\
	filter/LensCorrection.cpp\
	filter/Negate.cpp\
	filter/Noise.cpp\
	filter/Pad.cpp\
	filter/Perspective.cpp\
	filter/Phaser.cpp\
	filter/Resample.cpp\
	filter/Rotate.cpp\
	filter/Scale.cpp\
	filter/Transpose.cpp\
	filter/Unsharp.cpp\
	filter/Vignette.cpp\
	filter/VolumeAndTone.cpp\
	filter/Watermark.cpp\
	tools/FFQConcat.cpp\
	tools/FFQThumbMake.cpp\
	tools/FFQThumbPanel.cpp\
	tools/FFQVidStab.cpp\
	tools/FFQVideoToGIF.cpp\
	utils/FFQBuildCmd.cpp\
	utils/FFQCodecInfo.cpp\
	utils/FFQCompress.cpp\
	utils/FFQConfig.cpp\
	utils/FFQConsole.cpp\
	utils/FFQConst.cpp\
	utils/FFQFilter.cpp\
	utils/FFQHash.cpp\
	utils/FFQJob.cpp\
	utils/FFQLang.cpp\
	utils/FFQMisc.cpp\
	utils/FFQNvpList.cpp\
	utils/FFQParsing.cpp\
	utils/FFQPixFmt.cpp\
	utils/FFQPreset.cpp\
	utils/FFQProbing.cpp\
	utils/FFQProcess.cpp\
	utils/FFQQueueItem.cpp\
	utils/FFQStaticJob.cpp\
	utils/FFQStreamMapping.cpp\
	utils/FFQTaskBar.cpp\
	utils/FFQThumbs.cpp\
	utils/FFQTimeValue.cpp\
	utils/FFQToolJobs.cpp